# property-lister

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/property_lister/: main.py  property_lister.py
src/property_lister/utils/: config.py  directory.py  extractor.py  file.py  general.py  plist.py  sql.py  validate.py
